--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 project(KeystrokeBiometrics)
 add_library(key_logger STATIC wooting_sdk/key-logger.cpp)
-add_library(utils STATIC utils/time/utils-time.cpp)
+add_library(execute STATIC execute/execute.cpp execute/external/execute-external.cpp execute/logger/execute-logger.cpp)
+add_library(utils STATIC utils/time/utils-time.cpp utils/key/utils-key.cpp)
 add_library(config STATIC config/config-manager.cpp config/app-config.cpp)
 add_library(logger STATIC logger/logger.cpp)
 
@@ -19,4 +20,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(keystroke_biometrics PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/wooting_analog_sdk.lib")
 target_link_libraries(keystroke_biometrics PRIVATE spdlog::spdlog_header_only)
-target_link_libraries(keystroke_biometrics PRIVATE key_logger utils config logger)
+target_link_libraries(keystroke_biometrics PRIVATE key_logger execute utils config logger)
