Add optimizer data loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/FS>")
 project(KeystrokeBiometrics)
 add_library(key_logger STATIC wooting_sdk/key-logger.cpp)
 add_library(execute STATIC execute/execute.cpp execute/external/execute-external.cpp execute/logger/execute-logger.cpp)
-add_library(utils STATIC utils/time/utils-time.cpp utils/key/utils-key.cpp utils/key/validators/utils-key-validators.cpp utils/biometric_template/utils-template.cpp utils/math/utils-math.cpp utils/calc/utils-calc.cpp)
+add_library(utils STATIC utils/time/utils-time.cpp utils/key/utils-key.cpp utils/key/validators/utils-key-validators.cpp utils/biometric_template/utils-template.cpp utils/math/utils-math.cpp utils/calc/utils-calc.cpp utils/optimizer/utils-optimizer.cpp)
 add_library(config STATIC config/config-manager.cpp config/app-config.cpp config/language-config.cpp config/calc-config.cpp config/logger-config.cpp)
 add_library(database STATIC database/database.cpp)
 add_library(database_models STATIC database/models/calc-key-hit.cpp database/models/calc-ngraph.cpp database/models/key-hit.cpp database/models/ngraph.cpp)
