Copy files to build directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/FS>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/FS>")
 
+set(LANGUAGE_SOURCE "${CMAKE_SOURCE_DIR}/languages")
+set(EXE_OUTPUT "${CMAKE_BINARY_DIR}/Build")
 
 project(KeystrokeBiometrics)
 add_library(key_logger STATIC wooting_sdk/key-logger.cpp)
@@ -21,6 +23,15 @@ add_library(database_templates STATIC database/templates/template-container.cpp)
 
 add_executable(keystroke_biometrics main.cpp)
 
+set_target_properties(keystroke_biometrics PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${EXE_OUTPUT}"
+)
+
+set(DIRECTORIES_TO_CREATE 
+    "$<TARGET_FILE_DIR:keystroke_biometrics>/templates"
+    "$<TARGET_FILE_DIR:keystroke_biometrics>/optimization"
+    "$<TARGET_FILE_DIR:keystroke_biometrics>/logs"
+)
 
 target_include_directories(keystroke_biometrics PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
@@ -39,3 +50,8 @@ target_link_libraries(keystroke_biometrics PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/
 target_link_libraries(keystroke_biometrics PRIVATE spdlog::spdlog_header_only GSL::gsl GSL::gslcblas)
 target_link_libraries(keystroke_biometrics PRIVATE key_logger execute utils config database database_models database_containers database_templates optimizer)
 
+add_custom_command(TARGET keystroke_biometrics POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DIRECTORIES_TO_CREATE}
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${LANGUAGE_SOURCE} "$<TARGET_FILE_DIR:keystroke_biometrics>/languages"
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/libs/libfftw3-3.dll" $<TARGET_FILE_DIR:keystroke_biometrics>
+)
